# prov

./: .bumpversion.cfg  .codacy.yaml  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES.txt  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENCE.txt  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  ROADMAP.md  SECURITY.md  convert.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tests.py  tox.ini
.codacy/: .gitignore  codacy.config.json
.github/: dependabot.yml
.github/workflows/: CI.yml  mypy.yml  release.yml
cla/: krischer.rst  satra.rst
docs/: conf.py  dependencies.md  index.rst  installation.rst  modules.rst  prov.rst  prov.serializers.rst  requirements.txt  test-gap-checklist.md  upgrading-3.0.md  usage.rst
docs/explanation/: prov-dm.md  unification-flattening.md
docs/howto/: cli.md  graphics.md  networkx.md  provjson.md  provn.md  provo-rdf.md  provxml.md
docs/reference/: conformance.md  constants.md  dot.md  graph.md  identifier.md  index.md  model.md  serializers.md
docs/superpowers/plans/: .gitignore  2026-07-03-phase-0-1-foundation.md  2026-07-04-phase-2-typing-coverage.md  2026-07-05-phase-3-docs-tests-refactor.md  2026-07-10-phase-3.5-conformance-audit.md  2026-07-12-release-2.5.0.md  2026-07-18-3.0-batch1-floor-raising.md  2026-07-19-3.0-batch2a-value-typing-conformance.md  2026-07-19-3.0-batch2b-roundtrip-emission-conformance.md  2026-07-19-3.0-batch3-unification-rework.md  2026-07-19-3.0-batch4-closeout-release.md  2026-07-20-3.0-batch2c-provo-decode-fidelity.md
docs/superpowers/specs/: 2026-07-03-modernisation-roadmap-design.md  2026-07-04-3x-typing-api-improvements.md  2026-07-06-test-suite-redesign.md  2026-07-10-conformance-audit-findings.md  2026-07-10-unification-gap-analysis.md
docs/superpowers/triage/: 2026-07-behaviour-bugs.md
docs/tutorial/: getting-started.md
examples/: container0.json  container1.json  container1.prov  container2.json  container2.prov  container3.json  ex-prefix-default.json  ex-prefix.json  ex-simple.json  file-example1.json  file-example2.json  file-example3.json  prov-family.json  w3c-publication1.json  w3c-publication2.json  w3c-publication3.json
examples/json/5-simple-provenance-statements/: 1.json  1.n3  2.json  2.n3  3.json  3.n3  4.json  4.n3  5.json  5.n3  5b.json  5c.json  README  data_types.json
prov/: __init__.py  constants.py  contants.py  dot.py  graph.py  identifier.py  model.py  testsettings.py
prov/model/: __init__.py  graph.py
prov/model/test/: examples.py  testModel.py  testRDF.py
prov/persistence/: admin.py  models.py  tests.py
prov/persistence/migrations/: 0001_initial.py  0002_changed_charfields_to_unlimited_textfields.py  0003_auto__add_field_literalattribute_langtag.py
prov/serializers/: __init__.py  provjson.py  provjsonld.py  provn.py  provrdf.py  provxml.py
prov/tests/: attributes.py  examples.py  qnames.py  statements.py  testAttributes.py  testModel.py  testStatements.py  test_attributes.py  test_dot.py  test_extras.py  test_graphs.py  test_json.py  test_jsonld.py  test_model.py  test_rdf.py  test_serializer.py  test_statements.py  test_xml.py  utility.py
prov/tests/json/: activity1.json  activity2.json  activity3.json  activity4.json  activity5.json  activity6.json  activity7.json  activity8.json  activity9.json  agent1.json  agent4.json  agent5.json  agent6.json  agent7.json  agent8.json  association1.json  association3.json  association6.json  association7.json  association9.json  attr_activity0.json  attr_agent0.json  attr_association0.json  attr_association_one_role_attr0.json  attr_association_one_role_attr1.json  attr_association_one_role_attr17.json  attr_association_one_role_attr19.json  attr_association_one_role_attr21.json  attr_association_one_role_attr22.json  attr_association_one_role_attr23.json  attr_association_one_role_attr24.json  attr_association_one_role_attr25.json  attr_association_one_role_attr26.json  attr_association_one_role_attr27.json  attr_association_one_role_attr30.json  attr_association_one_role_attr31.json  attr_association_one_role_attr32.json  attr_association_one_role_attr34.json  attr_association_one_role_attr36.json  attr_association_one_role_attr37.json  (+203 more)
prov/tests/rdf/: activity1.ttl  activity5.ttl  activity6.ttl  activity7.ttl  activity8.ttl  activity9.ttl  agent2.ttl  agent3.ttl  agent5.ttl  agent6.ttl  agent7.ttl  agent8.ttl  association1.ttl  association2.ttl  association3.ttl  association5.ttl  association6.ttl  association7.ttl  association8.ttl  association9.ttl  attr_activity0.ttl  attr_agent0.ttl  attr_association0.ttl  attr_association_one_role_attr0.ttl  attr_association_one_role_attr1.ttl  attr_association_one_role_attr14.ttl  attr_association_one_role_attr2.ttl  attr_association_one_role_attr3.ttl  (+202 more)
prov/tracking/: __init__.py
provpy/: .project  .pydevproject  CHANGES.txt  MANIFEST.in  README.txt  TODO.txt  provpy.py  provpyexample.py  provpyexample_Elements.py  settings.py  setup.py  urls.py
provpy/dm/: __init__.py
provpy/model/: README.txt  __init__.py  common.html  common.py  core.html  core.py  index.html
provpy/prov/: README.md  __init__.py  db.sqlite  settings.py  urls.py
provpy/provdjango/: README.md  model.py  provmodel.py  settings.py  urls.py
provpy/provdm/: CHANGES.txt  LICENSE.txt  exampleresult.json  provpy.py  provpyexample.py  provpyexample_Elements.py  provpyexample_Literal.py  provpyexample_PROVQname_PROVNamespace.py  provpyexample_PROVURIRef_PROVNamespace.py  provpyexample_Relations.py  setup.py
provpy/provlogging/: __init__.py
provpy/server/: api.py  models.py  views.py
provpy/static/: post-test.html
provpy/templates/: base.html
provpy/tracking/: __init__.py
scripts/: prov-compare  prov-convert
specs/json/: extra.css  json.html  literal.json  prov-json-schema.js
src/prov/: __init__.py  constants.py  dot.py  graph.py  identifier.py  model.py
tests/: testModel.py
utils/: indexed-json.html
utils/js/: idxjson.js
utils/prov-client/: pom.xml
(+1249 files in other folders)
