[project]
name = "prov"
dynamic = ["version"]
description = "A library for W3C Provenance Data Model supporting PROV-JSON, PROV-XML and PROV-O (RDF)"
readme = "README.rst"
authors = [
    { name = "Trung Dong Huynh", email = "trungdong@donggiang.com" }
]
keywords = ["provenance", "graph", "model", "PROV", "PROV-DM", "PROV-JSON", "W3C", "PROV-XML", "PROV-N", "PROV-O", "RDF"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Security",
    "Topic :: System :: Logging",
]
requires-python = ">=3.10"
dependencies = [
    "networkx>=2.0",
    # Supporting graphic outputs (e.g. PNG, SVG, PDF) - a local graphviz is required
    "pydot>=1.2.0",
    "python-dateutil>=2.2",  # TODO: is this really needed?
]

[project.optional-dependencies]
rdf = [
    "rdflib>=4.2.1,<7",
]
xml = [
    "lxml>=3.3.5",
]
plot = [
    "matplotlib>=3.6",
]

[project.scripts]
prov-convert = "prov.scripts.convert:main"
prov-compare = "prov.scripts.compare:main"

[project.urls]
Homepage = "https://github.com/trungdong/prov"
Documentation = "https://prov.readthedocs.io"
Repository = "https://github.com/trungdong/prov"
Issues = "https://github.com/trungdong/prov/issues"
Changelog = "https://prov.readthedocs.io/en/latest/history.html"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "prov.__version__"}

[tool.setuptools.package-data]
"prov.tests" = [
    "json/*.json",
    "xml/*.xml",
    "rdf/*.ttl",
    "rdf/*.trig",
    "unification/*.json",
]

[dependency-groups]
dev = [
    "bumpversion>=0.6.0",
    "coverage>=7.6.10",
    "lxml-stubs>=0.5.1",
    "mypy>=1.19.1",
    "pre-commit>=4.0.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "setuptools>=75.8.0",
    "sphinx>=8.1.3; python_version >= '3.11'",
    "sphinx-rtd-theme",
    "tox>=4.23.2",
    "types-networkx>=3.4.2.20250509",
    "types-python-dateutil>=2.9.0.20260124",
    "wheel>=0.45.1",
]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["build"]  # dist/.eggs are already in ruff's default excludes

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "UP",  # pyupgrade (3.10-safe)
]
ignore = [
    "E203",  # whitespace before ':' (black/ruff-format compatible)
    "E501",  # line length handled by the formatter
    # These two pyupgrade rules only offer *unsafe* fixes when targeting py39
    # (ruff can't prove nothing relies on runtime evaluation of the old
    # syntax, e.g. via typing.get_type_hints()), so they fire on almost every
    # annotated/`%`-formatted line in the project without an autofix.
    # Deferred to a dedicated follow-up rather than mass hand-editing here.
    "UP045",  # non-pep604-annotation-optional (`Optional[X]` -> `X | None`)
    "UP031",  # printf-string-formatting (`%` -> `.format()`/f-string)
]

[tool.ruff.lint.per-file-ignores]
# These modules intentionally re-export everything from another module with
# `import *`; pyflakes can't tell which of the resulting names are "used".
"src/prov/model.py" = ["F403", "F405"]
"src/prov/serializers/provjson.py" = ["F403", "F405"]
"src/prov/serializers/provxml.py" = ["F403", "F405"]
"src/prov/tests/attributes.py" = ["F403", "F405"]
"src/prov/tests/statements.py" = ["F403", "F405"]
"src/prov/tests/test_extras.py" = ["F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["src/prov/tests"]
# Rely solely on pytest's unittest.TestCase collection; disabling the
# plain-class "Test*" heuristic avoids also collecting the shared mixin
# base classes (TestAttributesBase, TestStatementsBase,
# TestQualifiedNamesBase in prov/tests/{attributes,statements,qnames}.py),
# which are imported by name into test_model.py/test_rdf.py but are not
# meant to run standalone (unittest discover never picked them up either,
# since they aren't TestCase subclasses).
python_classes = []

[tool.coverage.run]
branch = true
source = ["prov"]
omit = ["*/tests*"]

[tool.coverage.paths]
source = [
    "src/prov",
    ".tox/*/lib/python*/site-packages/prov",
    ".tox/pypy*/site-packages/prov",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
exclude = ["^src/prov/tests/"]

[[tool.mypy.overrides]]
module = "prov.*"
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# rdflib ships its own inline types (py.typed) that are far stricter than
# this module's historic behaviour of freely mixing rdflib term types
# (URIRef/BNode/Literal/Node) with prov.model's QualifiedName/str
# identifiers at runtime -- which works correctly (see the RDF round-trip
# tests in prov.tests.test_rdf). Untangling that is a real typing refactor,
# deferred to a follow-up; suppress the resulting noise for this module only
# rather than scatter dozens of individually-justified ignores.
module = "prov.serializers.provrdf"
disable_error_code = ["arg-type", "assignment", "operator", "index"]

[[tool.mypy.overrides]]
# pydot.Dot.create() is annotated to return `str`, but its own docstring
# says (and it actually does, for binary Graphviz formats) return `bytes`;
# this is an inaccuracy in pydot's stub, not a bug in this module.
module = "prov.scripts.convert"
disable_error_code = ["arg-type"]
