[project]
name = "prov"
dynamic = ["version"]
description = "A library for W3C Provenance Data Model supporting PROV-JSON, PROV-XML and PROV-O (RDF)"
readme = "README.rst"
authors = [
    { name = "Trung Dong Huynh", email = "trungdong@donggiang.com" }
]
keywords = ["provenance", "graph", "model", "PROV", "PROV-DM", "PROV-JSON", "W3C", "PROV-XML", "PROV-N", "PROV-O", "RDF"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Security",
    "Topic :: System :: Logging",
]
requires-python = ">=3.10"
dependencies = [
    "networkx>=2.0",
    # Supporting graphic outputs (e.g. PNG, SVG, PDF) - a local graphviz is required
    "pydot>=1.2.0",
    "python-dateutil>=2.2",  # TODO: is this really needed?
]

[project.optional-dependencies]
rdf = [
    "rdflib>=6.0.0,<8",
]
xml = [
    "lxml>=3.3.5",
]
plot = [
    "matplotlib>=3.6",
]

[project.scripts]
prov-convert = "prov.scripts.convert:main"
prov-compare = "prov.scripts.compare:main"

[project.urls]
Homepage = "https://github.com/trungdong/prov"
Documentation = "https://prov.readthedocs.io"
Repository = "https://github.com/trungdong/prov"
Issues = "https://github.com/trungdong/prov/issues"
Changelog = "https://prov.readthedocs.io/en/latest/history.html"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "prov.__version__"}

[tool.setuptools.package-data]
prov = ["py.typed"]
"prov.tests" = [
    "json/*.json",
    "xml/*.xml",
    "rdf/*.ttl",
    "rdf/*.trig",
    "unification/*.json",
    "malformed/*",
    "schemas/*",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "hypothesis>=6.156.1",
    "lxml-stubs>=0.5.1",
    "mypy>=1.19.1",
    "pre-commit>=4.0.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "types-networkx>=3.4.2.20250509",
    "types-python-dateutil>=2.9.0.20260124",
]
docs = [
    "sphinx>=8.1.3,<9",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
]

[tool.uv]
# numpy is a transitive typing dependency (via types-networkx/matplotlib), not
# something prov imports itself. numpy 2.5 switched its inline stubs to
# unconditional PEP 695 `type` statements, which mypy refuses to parse once
# `[tool.mypy] python_version` is below 3.12 (see below) regardless of the
# interpreter actually running mypy. Cap it below that until numpy's stubs
# gate the new syntax on `python_version`, or this project's mypy floor rises
# to 3.12. If a Dependabot bump of matplotlib or types-networkx ever fails to
# resolve, this pin is the likely cause: lift it, run `uv run mypy src`, and
# keep it lifted only if mypy stays green.
constraint-dependencies = ["numpy<2.5"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["build"]  # dist/.eggs are already in ruff's default excludes

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort (import sorting)
    "SIM", # flake8-simplify
    "UP",  # pyupgrade (3.10-safe)
    "RUF", # ruff-specific rules
]
ignore = [
    "E203",  # whitespace before ':' (black/ruff-format compatible)
    "E501",  # line length handled by the formatter
]

[tool.ruff.lint.isort]
combine-as-imports = true  # keep multi-name `X as X` re-export blocks compact

[tool.ruff.lint.per-file-ignores]
# These modules intentionally re-export everything from another module with
# `import *`; pyflakes can't tell which of the resulting names are "used".
"src/prov/model/__init__.py" = ["F403", "F405"]
"src/prov/serializers/provjson.py" = ["F403", "F405"]
"src/prov/serializers/provxml.py" = ["F403", "F405"]
"src/prov/tests/test_statements.py" = ["F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["src/prov/tests"]
filterwarnings = [
    "ignore:In prov 3.0:DeprecationWarning",
    "ignore:prov 3.0 will change unified:FutureWarning",
]

[tool.coverage.run]
branch = true
source = ["prov"]
omit = ["*/prov/tests/*"]

[tool.coverage.report]
# Coverage ratchet (docs/test-gap-checklist.md). T13 fixed the `omit` glob
# above (it previously did not exclude src/prov/tests/, inflating TOTAL by
# ~3.8pt with near-fully-covered test code) and closed the remaining
# checklist gaps; the honest package-only TOTAL measured after that work is
# 97.42%, rounded down to this floor. Never lower without a documented
# reason. Remaining misses are individually annotated as "defer" in the
# checklist (dead/defensive branches unreachable via the public API, plus
# the matplotlib-requiring interactive plot() path not installed in the
# test env).
fail_under = 97
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["^src/prov/tests/"]
